--- a/custom.css
+++ b/custom.css
@@ -72,3 +72,12 @@ section.module.parallax-1 {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.footer {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+}
