--- a/CSS/bingo.css
+++ b/CSS/bingo.css
@@ -3,10 +3,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 #cartela table{
     border: 2px solid black;
+    margin: 10px;
 }
 
 #cartela thead{
@@ -32,5 +34,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
+#cabecalho button{
+    margin: 2px;
+}
+
+#sorteados{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 800px;
+}
+
+#sorteados span{
+    font-size: 30px;
+    background-color:rgb(58, 56, 69);
+    padding: 2px;
+    margin: 3px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border: 1px solid rgb(255, 251, 233);
+    border-radius: 50%;
 }
