--- a/custom.css
+++ b/custom.css
@@ -78,6 +78,7 @@ section.module.parallax-1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
 }
